Bug 57978 - UI: Insert / Edit Index Entry: No Aggregation of 1st Key
Summary: UI: Insert / Edit Index Entry: No Aggregation of 1st Key
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-07 10:12 UTC by Riccardo Escher
Modified: 2016-08-03 09:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (10.75 KB, image/png)
2012-12-07 10:12 UTC, Riccardo Escher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Escher 2012-12-07 10:12:06 UTC
Created attachment 71122 [details]
Screenshot

Function Insert -> Index & Tables -> Entry -> Alphabetical Index;

open the combo box (value help) for 1st key in a document with already many indexed entries with 1st not unique keys: you will receive a list with single 1st key entries of all index entries(!), not aggregated so that there is only one entry for every used 1st key.
So you are forced to scroll very much to find the 1st key you are looking for.

Same for 2nd key.

In past versions (3.0? 3.3? I forgot it) it worked as desired. For one(?) year I hoped that the bug got fixed, but nothing, so now I report it. 

Steps to reproduce:
1. Insert some different words into the alphabetical index using two 1st keys as dummy (for example 5 times "key1" and 5 times "key2" as 1st key)

Current behavior:
When you open the combo box "1st key" for a 11th index entry you get 5 identical items "key1" and 5 identical items "key2" to choose from

Expected behavior:
You get in the combo box "1st key" only two items: "key1" and "key2" to choose from (unique or distinct key display)
Comment 1 wa4otj 2013-03-08 20:40:29 UTC
I have often encountered this problem, or what appears to be the same problem, in 4.0.0.3 and it is extremely easy to reproduce.  I am unclear as to why it remains unconfirmed, and it is very troublesome in large documents with large indexes.

Hopefully the following instructions will help confirm it.  Also, I will note that OpenOffice Writer does NOT have the problem, and that this issue is keeping me using OO instead of moving to LibreOffice.

(1) Create a new text document, enter a bit of random text.  Add a few names with the same surname.  e.g.  John Smith, James Smith, Joseph Smith, etc.

(2) Highlight a name and select Insert|Indexes and Tables|Entry...

(3) Select alphabetical index as index type.  

(4) In the box "First Key" type Smith.

(5) Repeat for each name.  Note that as you add names to the index, the number of entries for "smith" increases by one.  It is NOT necessary to retype the key Smith into the field.  Merely hitting Insert when the 1St key displays the name smith will add one, even if it merely remains from the previous entry and was not even selected from the dropdown list.

The practical effect is that creating a document of any respectable size with a large index becomes difficult, as the numbers of entries for each key explodes.  I am working on a huge document with hundreds of index entries, and it is virtually unmanageable.

I would urge addressing this issue, as it is neither minor, nor difficult to reproduce.
Comment 2 Brenda Granados 2013-03-08 22:50:23 UTC
Hi, I am sorry for the delay in confirming this bug report. I was able to confirm this issue- in the 1st Key box of the Entry dialog, a new key "Smith" is added every time you choose to add another entry, even without selecting it.

I will mark this as NEW.

Platform: Ubuntu Linux 12.04 LTS x64
Version: 4.0.1.2

-Brenda

---------------------------

LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link: https://wiki.documentfoundation.org/QA/BugTriage  There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists
Comment 3 Peter CM 2014-12-24 19:34:34 UTC
Bug confirmed in LibreOffice Writer 4.3.5.2. (Also confirmed: having to repeatedly scroll through long sequences of duplicate keys in order to select the one you're looking for is indeed extremely annoying.)
Comment 4 QA Administrators 2016-01-17 20:01:58 UTC Comment hidden (obsolete)
Comment 5 Riccardo Escher 2016-01-18 09:12:44 UTC
Hi,
the bug is still present.
Just tested with version 5.0.4.2 on Windows 7.
Comment 6 Commit Notification 2016-07-27 08:12:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c755336853f20c7b2dd14e9c56eeb441d831be2c

Resolves: tdf#57978 don't show duplicate index keys in dropdown list

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-08-03 09:35:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c4c6ad9cacc09c40fb47ebd98450d3aad91bfb41&h=libreoffice-5-2

Resolves: tdf#57978 don't show duplicate index keys in dropdown list

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.