Resolves: tdf#57978 don't show duplicate index keys in dropdown list

Change-Id: I25e25157063ea4424f770b397d879cb7bfd46bcb
(cherry picked from commit c755336853f20c7b2dd14e9c56eeb441d831be2c)